<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lidköpings Stenhuggeri</string>
    <string name="title_stone_detail">Orderdetaljer</string>

    <string-array name="tasks_array">
        <item>Polering</item>
        <item>Sagning</item>
    </string-array>

    <string name="cemetery_board">Kyrkogårdsnämnd</string>
    <string name="cemetery">Kyrkogård</string>
    <string name="deceased">Avlidnes namn</string>
    <string name="desc">Beskrivning</string>
    <string name="model">Modell</string>
    <string name="material_and_color">Material och färg</string>
    <string name="front_processing">Bearbetning på framsidan</string>
    <string name="back_and_side_processing">Bearbetning på bak och framsida</string>
    <string name="text_style_and_processing">Textstil och bearbetning</string>
    <string name="ornament">Ornament</string>
    <string name="cemetery_number">Gravplatsbeteckning</string>
    <string name="test">test string</string>
    <string name="dynamic">dynamic</string>
    <string name="base">Sockel</string>
    <string name="long_test_string">This is a longer test string for testing longer strings suitability in lorem ipsum</string>
    <string name="stoneModel">Stenmodell</string>
    <string name="order_drawing">Orderritning</string>
    <string name="workerNote">Anteckningar</string>
    <string name="noteHint">Skriv här</string>
    <string name="tablet_startup_hint">Klicka i listan till vänster för att visa en order</string>
    <string name="dynamic_id_name">O.R.</string>
    <string name="searchHint">Sök</string>
    <string name="section_header">&lt;u>SECTION HEADER&lt;/u></string>
    <string name="network_error_change_data">Kan inte ändra status, kolla internetuppkopplingen</string>
    <string name="network_error_no_internet">Internetuppkoppling saknas, kolla internetuppkopplingen</string>
    <string name="no_images_found">Hittar ingen ritning för denna order :(</string>

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>
    
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="update">Uppdatera</string>
    <string name="logout">Logga ut</string>
    <string name="help">Hjälp</string>
    <string name="see_map_view">Se Kartvy</string>
</resources>