<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/flow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="#fff"
            android:columnCount="2"
            android:padding="@dimen/default_padding"
            android:rowCount="5"
            android:useDefaultMargins="true" >

            <TextView
                android:id="@+id/idName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_id_name"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/orderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/dynamic"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cemetery_number_header"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/cemetery_number"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cemetery_number"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cemeteryBoardHeader"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/cemetery_board"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cemeteryBoard"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cemeteryHeader"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/cemetery"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cemetery"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/TextView05"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/material_and_color"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/materialAndColor"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stoneModelHeader"
                style="?android:attr/textAppearanceLarge"
                android:text="@string/stoneModel"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stoneModel"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/TextView10"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/ornament"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ornament"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="#fff"
            android:columnCount="2"
            android:padding="15dp"
            android:rowCount="5"
            android:useDefaultMargins="true" >

            <TextView
                android:id="@+id/TextView04"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/TextView07"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_processing"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/frontProcessing"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/TextView08"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_style_and_processing"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textStyleAndProcessing"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/workerNotesHeader"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/workerNote"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText1"
                android:layout_column="0"
                android:layout_gravity="right|top"
                android:ems="10"
                android:hint="@string/noteHint"
                android:text="@string/noteHint" >

                <requestFocus />
            </EditText>
        </GridLayout>
    </LinearLayout>

</ScrollView>