<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin"
    android:layout_marginLeft="@dimen/default_margin"
    android:layout_marginRight="@dimen/default_margin"
    android:background="@drawable/card_border_shape"
    android:columnCount="1"
    android:padding="30dp"
    android:rowCount="10"
    android:useDefaultMargins="true" >

    <!-- Beskrivning -->

    <TextView
        android:id="@+id/TextView04"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic"
        android:textIsSelectable="true"
        android:textSize="16sp" />

    <!-- Material och farg -->

    <TextView
        android:id="@+id/TextView05"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/material_and_color"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/materialAndColor"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/dynamic"
        android:textIsSelectable="true"
        android:textSize="16sp" />

    <!-- Bearbetning pa framsidan -->

    <TextView
        android:id="@+id/TextView07"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/front_processing"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/frontProcessing"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic"
        android:textIsSelectable="true"
        android:textSize="16sp" />

    <!-- Textstil och bearbetning -->

    <TextView
        android:id="@+id/TextView08"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_style_and_processing"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textStyleAndProcessing"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic"
        android:textIsSelectable="true"
        android:textSize="16sp" />

</GridLayout>