<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabDetailContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/idName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="O.S"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/orderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dynamic"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="vertical" >
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/burialNameHeader"
            style="?android:attr/textAppearanceLarge"
            android:text="@string/burial_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/burialName"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cemeteryBoardHeader"
            style="?android:attr/textAppearanceLarge"
            android:text="@string/cemetery_board"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cemeteryBoard"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cemeteryHeader"
            style="?android:attr/textAppearanceLarge"
            android:text="@string/cemetery"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cemetery"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView05"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/material_and_color"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/materialAndColor"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/stoneModelHeader"
            style="?android:attr/textAppearanceLarge"
            android:text="@string/stoneModel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stoneModel"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView10"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/ornament"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ornament"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView04"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/desc"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView07"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/front_processing"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frontProcessing"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView08"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/text_style_and_processing"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textStyleAndProcessing"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/dynamic"
            android:textIsSelectable="true"
            android:textSize="18sp" />
    </GridLayout>

</LinearLayout>

